fix overlap of logo/home link

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ header {
 
 
 .mainNav {
-    height: 10vh;
+    height: 12.5vh;
     width: 100vw;
     background: linear-gradient( black 25%, transparent 100%);
     display: flex;
@@ -49,7 +49,7 @@ header {
     align-items: flex-end;
     position: fixed;
     top: 0; left: 0;
-    padding-bottom: 1rem;
+    // padding-bottom: 1rem;
     z-index: 50;
     font-size: 1.6rem;
     text-transform: uppercase;
@@ -66,7 +66,7 @@ header {
     position: sticky;
     top: 0; left: 0;
     width: 100%;
-    z-index: 40;
+    z-index: 60;
     margin-top: 27.5vh;
     height: 10vh;
     display: flex;
@@ -80,13 +80,18 @@ header {
     text-decoration: none;
 }
 
+
 #logo {
     font-family: Rokkitt, serif;
     font-weight: 700;
     font-size: 15vw;
     letter-spacing: 2vw;
     transition: font-size .25s;
-    margin-top: -3vh;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: relative;
+    top: 0; left: 0;
+    z-index:70;
     
 }
 
@@ -183,7 +188,7 @@ footer {
 .content {
     background:rgba(0,0,0,.5);
     position: relative;
-    top: 42.5vh;
+    top: 41vh;
     z-index: 20; 
     min-height: 100vh;
     padding: 7.5vh 0 7.5vh 0;
@@ -453,7 +458,7 @@ h2 {
     font-size: 12rem;
     color: rgb(140, 206, 77);
     font-weight: 100;
-    margin-top: 8rem;
+    margin-top: 12rem;
 
 }
 
